--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,21 @@ ul.nav {
   font-family: 'Lato', sans-serif;
 }
 
+#content-block {
+  background-color: #37424A;
+  color: white;
+  font-size: 17px;
+  font-weight: 100;
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+
+footer {
+  background-color: #47a3ff;
+  padding-top: 150px;
+  padding-bottom: 30px;
+}
+
 .navbar-inverse .navbar-nav>li>a {
   color: white;
   font-weight: 100;
@@ -28,13 +43,15 @@ ul.nav {
   background-position: center center;
   opacity: 0.7;
   color: white;
+  margin-bottom: 0;
 }
 
 .jumbotron h1 {
   font-family: 'Lato', sans-serif;
   letter-spacing: 3px;
-  margin-top: 0px;
+  margin-top: 700px;
   margin-bottom: 50px;
+  font-weight: 700;
 }
 
 .jumbotron p {
@@ -79,7 +96,7 @@ ul.nav {
 
 .homepage hr {
   border-top: 1px solid  #47a3ff;
-  width: 100px;
+  width: 110px;
   margin-top: 15px;
 }
 
