--- a/css/custom.css
+++ b/css/custom.css
@@ -37,14 +37,11 @@ footer {
 }
 
 .jumbotron  {
-  text-align: center;
-  background-image: url('../images/hero.jpg');
+  text-align: right;
+  color: white;
+  background-image: url('../images/main_hero_test1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
-  opacity: 0.7;
-  color: white;
-  margin-bottom: 0;
 }
 
 .jumbotron h1 {
