--- a/css/custom.css
+++ b/css/custom.css
@@ -40,8 +40,10 @@ footer {
   text-align: right;
   color: white;
   background-image: url('../images/main_hero_test1.jpg');
+  background-color: white;
   background-repeat: no-repeat;
   background-size: 1170px;
+  margin-bottom: 0;
 }
 
 .jumbotron h1 {
@@ -60,7 +62,7 @@ footer {
 
 .btn-lg {
   font-size: 30px;
-  background-color: black;
+  background-color: white;
   color: white;
 }
 
