--- a/css/custom.css
+++ b/css/custom.css
@@ -10,8 +10,12 @@ ul.nav {
   font-family: 'Lato', sans-serif;
 }
 
+ul.h1 {
+  text-align: left;
+}
+
 #content-block {
-  background-color: #47a3ff;
+  background-color: #333333;
   color: white;
   font-size: 17px;
   padding-top: 75px;
@@ -20,7 +24,7 @@ ul.nav {
 }
 
 footer {
-  background-color: #47a3ff;
+  background-color: #B980EE;
   text-align: right;
   padding-top: 150px;
   padding-bottom: 30px;
@@ -36,21 +40,21 @@ footer {
   color: black;
 }
 
-.jumbotron  {
-  text-align: right;
-  color: white;
-  background-image: url('../images/main_hero_test1.jpg');
-  background-color: white;
-  background-repeat: no-repeat;
-  background-size: 1170px;
+.jumbotron {
+  background-color: #B980EE;
+  text-align: center;
+  color: black;
+  /*background-image: url('../images/main_hero_test1.jpg');*/
+  background position: center center;
+  /*opacity: 0.9;*/
   margin-bottom: 0;
 }
 
 .jumbotron h1 {
   font-family: 'Lato', sans-serif;
   letter-spacing: 3px;
-  margin-top: 700px;
-  margin-bottom: 50px;
+  /*margin-top: 700px;
+  margin-bottom: 50px;*/
   font-weight: 700;
 }
 
@@ -61,9 +65,8 @@ footer {
 }
 
 .btn-lg {
+  background-color: yellow;
   font-size: 30px;
-  background-color: white;
-  color: white;
 }
 
 .homepage {
@@ -71,7 +74,7 @@ footer {
 }
 
 .homepage h2, .homepage h3 {
-  color: #47a3ff;
+  color: #B980EE;
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
 }
@@ -91,12 +94,16 @@ footer {
 }
 
 .homepage a {
-  color: #47a3ff;
+  color: #B980EE;
   font-weight: 100;
 }
 
+.homepage a:hover {
+  color: #e74c3c;
+}
+
 .homepage hr {
-  border-top: 1px solid  #47a3ff;
+  border-top: 1px solid  #B980EE;
   width: 115px;
   margin-top: 15px;
 }
