--- a/css/custom.css
+++ b/css/custom.css
@@ -55,6 +55,10 @@ footer {
   margin-bottom: 0;
 }
 
+.jumbotron .container {
+  margin: 75px;
+}
+
 .jumbotron h1 {
   font-family: 'Lato', sans-serif;
   letter-spacing: 3px;
@@ -72,7 +76,7 @@ footer {
 .btn-lg {
   background-color: #FFFF00;
   font-size: 30px;
-  margin: 65px;
+  /*margin: 65px;*/
 }
 
 .homepage {
