--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,10 @@ ul.nav {
   font-family: 'Lato', sans-serif;
 }
 
+.navbar-inverse .navbar-nav>li>a:hover {
+  color: #B980EE;
+}
+
 ul.h1 {
   text-align: left;
 }
