--- a/css/custom.css
+++ b/css/custom.css
@@ -19,19 +19,33 @@ ul.h1 {
 }
 
 #content-block {
-  background-color: #333333;
-  color: white;
+  background-color: #EDEDED;
+  color: black;
   font-size: 17px;
   padding-top: 75px;
   padding-bottom: 75px;
   opacity: 0.9;
 }
 
+#stack {
+  background-color: #EBD6FF;
+}
+
+#stack h2 {
+  text-transform: lowercase;
+  background-color: #EBD6FF;
+}
+
 footer {
+  font-size: 16px;
   background-color: #B980EE;
   text-align: right;
   padding-top: 150px;
   padding-bottom: 30px;
+}
+
+footer p {
+  text-align: left;
 }
 
 .navbar-inverse .navbar-nav>li>a {
@@ -45,8 +59,15 @@ footer {
 }
 
 #about-me {
-  background-color: #EDEDED;
+  background-color: black;
+  color: white;
+  opacity: 0.7;
+}
+
+#about-me h2 {
   color: black;
+  font-weight: 700;
+  margin: 45px;
 }
 
 .jumbotron {
