--- a/css/custom.css
+++ b/css/custom.css
@@ -18,24 +18,6 @@ ul.h1 {
   text-align: left;
 }
 
-#content-block {
-  background-color: #EDEDED;
-  color: black;
-  font-size: 17px;
-  padding-top: 75px;
-  padding-bottom: 75px;
-  opacity: 0.9;
-}
-
-#stack {
-  background-color: #EBD6FF;
-}
-
-#stack h2 {
-  text-transform: lowercase;
-  background-color: #EBD6FF;
-}
-
 footer {
   font-size: 16px;
   background-color: #B980EE;
@@ -48,14 +30,25 @@ footer p {
   text-align: left;
 }
 
-.navbar-inverse .navbar-nav>li>a {
-  color: white;
-  font-weight: 100;
+#content-block {
+  background-color: #EDEDED;
+  color: black;
+  font-size: 17px;
+  padding-top: 75px;
+  padding-bottom: 75px;
+  opacity: 0.9;
 }
 
-.navbar-inverse .navbar-brand {
-  font-size: 45px;
-  color: white;
+#my-stack {
+  background-color: white;
+}
+
+#resume {
+  background-color: yellow;
+}
+#stack h2 {
+  text-transform: lowercase;
+  background-color: #EBD6FF;
 }
 
 #about-me {
@@ -65,9 +58,20 @@ footer p {
 }
 
 #about-me h2 {
-  color: black;
+  color: white;
   font-weight: 700;
   margin: 45px;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+  color: white;
+  font-weight: 100;
+}
+
+.navbar-inverse .navbar-brand {
+  font-size: 45px;
+  color: white;
+  letter-spacing: 3px;
 }
 
 .jumbotron {
@@ -94,10 +98,10 @@ footer p {
   padding: 0 50px;
 }
 
-.btn-lg {
-  background-color: #FFFF00;
-  font-size: 30px;
-  /*margin: 65px;*/
+.btn-default {
+  color: black;
+  background-color: white;
+  font-size: 20px;
 }
 
 .homepage {
@@ -122,6 +126,8 @@ footer p {
   font-size: 22px;
   font-weight: 100;
   letter-spacing: 1px;
+  margin-bottom: 20px;
+  margin: 20px;
 }
 
 .homepage a {
