--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,10 @@ ul.nav {
   font-size: 13px;
 }
 
+.navbar-inverse .navbar-nav>li>a {
+  color: white;
+}
+
 .jumbotron {
   text-align: center;
   background-image: url('../images/as_pic.jpg');
@@ -24,9 +28,11 @@ ul.nav {
   font-weight: 800;
   color: black;
   text-align: right;
+  padding-top: 100px;
 }
 
 .btn-lg {
   font-size: 30px;
   margin-top: 50px;
 }
+
